@@ -17,9 +17,6 @@
 AM_CPPFLAGS = -I$(iocore_include_dirs) \
               -I$(top_srcdir)/lib/records \
               -I$(top_srcdir)/proxy
-#             -I$(top_srcdir)/proxy/hdrs
-#             I$(top_srcdir)/proxy/logging
-
 
 DEFS += @IOCORE_MODULARIZED_DEFS@
 
