@@ -14,8 +14,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-AM_CXXFLAGS = -I$(top_builddir)/proxy/api \
-  -I$(top_srcdir)/proxy/api
+AM_CPPFLAGS = -I$(top_builddir)/proxy/api -I$(top_srcdir)/proxy/api
 
 pkglibdir = ${pkglibexecdir}
 pkglib_LTLIBRARIES = conf_remap.la
